Send an email when motion is detected

--- a/config.properties.sample
+++ b/config.properties.sample
@@ -8,6 +8,8 @@ event_name_on = socket_on
 event_name_off = socket_off
 
 [smtp]
+smtp_server = smtp.gmail.com
+smtp_port = 587
 from_mail = mail@example.com
 from_password = password
 recipients = mail1@example.com,mail2@example.com
