Trigger ON/OFF IFTTT when motion is detected. Added FALLING listener

--- a/config.properties.sample
+++ b/config.properties.sample
@@ -1,9 +1,10 @@
 [settings]
 debug = false
-socket = true
+ifttt = true
+pin = 4
 
 [ifttt]
-webhooks_url = https://maker.ifttt.com/use/your_token
+webhooks_url = https://maker.ifttt.com/trigger/{event}/with/key/your_token
 event_name_on = socket_on
 event_name_off = socket_off
 
